# python_servers_example

./: .gitignore  README.md  docker-compose.yaml
graphql/: client.py  pyproject.toml  server.py
graphql/cosine_similarity/: vectors.json
grpc/: Dockerfile  client.py  pyproject.toml  server.py
grpc/cosine_similarity/: data_access.py
grpc/pb/: cosine_similarity_pb2.py  cosine_similarity_pb2.pyi  cosine_similarity_pb2_grpc.py
grpc/proto/: cosine_similarity.proto
rest/: pyproject.toml  server.py
rest/cosine_similarity/: application.py  data_access.py
